java-package (0.50) UNRELEASED; urgency=low

  * Java-package reset for reintroduction in debian (removal of all
    previously supported jvm, global refactoring).
  * Add support for Oracle Java 6 (update >= 10)
  * Add support for Oracle Java 7
  * Add support for .jinfo file (update-java-alternatives tool)
  * Use jdk included jre binaries (jdk/jre/bin/*)

 -- Cédric Pineau <cedric.pineau@gmail.com>  Thu, 22 Dec 2011 11:42:13 +0100

java-package (0.43) UNRELEASED; urgency=low

  * Remove Java plugins for all browsers (Closes: #367887).
  * Add support for Sun Java 6 Update XX (Closes: #514364).

 -- Michael Koch <konqueror@gmx.de>  Thu, 17 Sep 2009 13:15:55 +0200

java-package (0.42) unstable; urgency=low

  * Provide java*-runtime-headless and java*-sdk names for generated
    packages.
  * Recommend dpkg-dev and gcc. Closes: #281766, #405814.

 -- Matthias Klose <doko@debian.org>  Sat, 02 Aug 2008 12:10:52 +0200

java-package (0.41) unstable; urgency=low

  * Added support for new SUN JDK/JRE for amd64 downloads. Thanks to
    Artyom Gavrichenkov for the initial patch.

 -- Michael Koch <konqueror@gmx.de>  Fri, 21 Mar 2008 17:20:35 +0100

java-package (0.40) unstable; urgency=low

  * Add support for ibm-java2-sdk-5.0-6.0-linux-$arch.tgz. Closes: #462399
    Thanks to Evgeni Dobrev for the patch.
  * Fixed spelling error in long description: debian -> Debian.

 -- Michael Koch <konqueror@gmx.de>  Thu, 24 Jan 2008 22:48:46 +0100

java-package (0.39) unstable; urgency=low

  * Added support for IBM JDK 6.0 final release.
  * Updated Standard-Version to 3.7.3.
  * Updated debhelper level to 5.

 -- Michael Koch <konqueror@gmx.de>  Tue, 18 Dec 2007 07:38:34 +0100

java-package (0.38) unstable; urgency=low

  * Mention SUN JDK 6 in REAME.Debian. Closes: #448258.
  * Fixed typo when creating version number for SUN JDK 6. Closes: #451935.
  * Fix handling of symlinks for ControlPanel, HtmlConverter and java-rmi.cgi
    from SUN JDK 6. Closes: #448351.
