@@ -1,0 +1,11 @@
+#!/bin/sh
+
+set -e
+
+if [ "$1" = "purge" ]
+then
+	. /usr/share/debconf/confmodule
+	db_purge
+fi
+
+exit 0
