@@ -1,0 +1,13 @@
+Template: java-package/postinst-note
+Type: note
+Description: Java-package is now installed - You can invoke make-jpkg to build Java Debian packages
+ To use it:
+   1) download one of the java binary archive listed below
+   2) invoke make-jpkg <archive-file> to build a Debian package from the downloaded archive-
+   3) install the generated package using dpkg
+ .
+ Supported Java binary distributions currently include:
+   * Oracle :
+     - The J2SE Development Kit (JDK), version 6 (update >= 10), 7
+     - The J2SE Runtime Environment (JRE), version 6 (update >= 10), 7
+     - The J2SE API Javadoc, version 6 (update >= 10), 7
